# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py
src/seekrit/: __init__.py  _client.py  _crypto.py  errors.py
testdata/: vectors.json
tests/: test_vectors.py
